'update to class constructor'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "workbench.colorTheme": "GitHub Dark",
+  "workbench.colorTheme": "Andromeda Colorizer",
   "liveServer.settings.port": 5501
 }
